[tool.poetry]
name = "ifconfig"
version = "0.1.0"
description = "A simple ifconfig query language"
authors = ["Jakub Janarek <jjanarek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
